# multi-lang-static-html-generator

./: Dockerfile  Makefile  README.md  docker-compose.yml
app/: pyproject.toml
app/application/usecase/: generate.py
app/domain/entity/page/: page.py
app/domain/entity/page/repository/: page_repository.py
app/domain/sevice/generator/: generator.py
app/domain/values/: language.py
app/infra/adapter/google_translation/: google_traslator.py
app/infra/repository/: page_repository.py
app/interface/cmd/: generate.py
app/src/: test.html
